# thunar-media-tags-plugin

./: .gitignore  ChangeLog  Makefile.am  NEWS  README  README.md  TODO  autogen.sh  configure.ac  configure.ac.in  configure.in.in  meson.build
po/: ChangeLog  LINGUAS  Makefile  POTFILES.in  am.po  ar.po  ast.po  be.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en_AU.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa_IR.po  fi.po  fr.po  gl.po  he.po  hi.po  hr.po  hu.po  hy_AM.po  hye.po  hye_RU.po  id.po  ie.po  is.po  it.po  ja.po  ka.po  kab.po  kk.po  (+36 more)
thunar-plugin/: Makefile.am  audio-tags-page.c  audio-tags-page.h  media-tags-plugin.c  media-tags-provider.c  media-tags-provider.h  meson.build  tag-renamer-plugin.c  tag-renamer-property-page.c  tag-renamer-property-page.h  tag-renamer-provider.c  tag-renamer-provider.h  tag-renamer.c  tag-renamer.h  thunar-sbr-tag-renamer-provider.c  thunar-sbr-tag-renamer-provider.h  thunar-sbr-tag-renamer.c  thunar-sbr-tag-renamer.h
thunar-tag-renamer-plugin/: Makefile.am  thunar-sbr-tag-renamer.c  thunar-sbr-tag-renamer.h  thunar-tag-renamer-plugin.c
